# TechaasSupportSystem

./: .env.sample  .gitignore  Dockerfile  README.md  clean_and_chroma.py  docker-compose.yaml  main.py  models.py  pyproject.toml  queries.py  requirements.txt  routes.py  tes_ma.py
api/: Dockerfile  compose.yml  models.py
app/: check.py  database.py  main.py  models.py  routes.py
app/processors/: getAnswer.py  requestResponse.py  retryRequest.py  stringToDateProcessor.py
backend/: Dockerfile  database.py  requirements.txt  routes.py
backend_ml/: Dockerfile  README.md  clean_and_chroma.py  pyproject.toml  queries.py  routes.py
frontend/: Dockerfile  main.py
ответы/: submission_Techaas.xlsx
