[tool.poetry]
name = "techaas-support-frontend"
version = "0.1.0"
description = ""
authors = ["emapfff <dvlemil_777@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
st-star-rating = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
